// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`conditional.html - parse5-verify 1`] = `
<!DOCTYPE html>
<html>
  <body>

    <!--[if IE 5]>This is IE 5<br><![endif]-->
    <!--[if IE 6]>This is IE 6<br><![endif]-->
    <!--[if IE 7]>This is IE 7<br><![endif]-->
    <!--[if IE 8]>This is IE 8<br><![endif]-->
    <!--[if IE 9]>This is IE 9<br><![endif]-->

  </body>
</html>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<!DOCTYPE html>
<html>
  <head></head>
  <body>
    <!--[if IE 5]>This is IE 5<br><![endif]-->
    <!--[if IE 6]>This is IE 6<br><![endif]-->
    <!--[if IE 7]>This is IE 7<br><![endif]-->
    <!--[if IE 8]>This is IE 8<br><![endif]-->
    <!--[if IE 9]>This is IE 9<br><![endif]-->
  </body>
</html>

`;

exports[`for_debugging.html - parse5-verify 1`] = `
<!DOCTYPE html>
<html>
  <body>

<!-- Do not display this at the moment
<img border="0" src="pic_trulli.jpg" alt="Trulli">
-->

  <!-- Do not display this at the moment
  <img border="0" src="pic_trulli.jpg" alt="Trulli">
  -->

    <!-- Do not display this at the moment
    <img border="0" src="pic_trulli.jpg" alt="Trulli">
    -->

  </body>
</html>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<!DOCTYPE html>
<html>
  <head></head>
  <body>
    <!-- Do not display this at the moment
<img border="0" src="pic_trulli.jpg" alt="Trulli">
-->

    <!-- Do not display this at the moment
  <img border="0" src="pic_trulli.jpg" alt="Trulli">
  -->

    <!-- Do not display this at the moment
    <img border="0" src="pic_trulli.jpg" alt="Trulli">
    -->
  </body>
</html>

`;

exports[`hidden.html - parse5-verify 1`] = `
<!DOCTYPE html>
<html>
    <body>

        <!--This is a comment-->
        <!-- This is a comment -->
        <!--  This is a comment  -->
        <!--   This   is   a   comment   -->
        <p>This is a paragraph.</p>
        <!-- Comments are not displayed in the browser -->

    </body>
</html>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<!DOCTYPE html>
<html>
  <head></head>
  <body>
    <!--This is a comment-->
    <!-- This is a comment -->
    <!--  This is a comment  -->
    <!--   This   is   a   comment   -->
    <p>This is a paragraph.</p>
    <!-- Comments are not displayed in the browser -->
  </body>
</html>

`;
